i think we did it

--- a/si670f23_hw_3_haleyej.ipynb
+++ b/si670f23_hw_3_haleyej.ipynb
@@ -396,24 +396,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "id": "5gbSD2UWzrIr"
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "y_true and y_pred have different number of output (10!=1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/49/3f_15lzd6b57lnzlk4m_9k440000gn/T/ipykernel_1275/1183754132.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmean_test_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m \u001b[0manswer_2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/49/3f_15lzd6b57lnzlk4m_9k440000gn/T/ipykernel_1275/1183754132.py\u001b[0m in \u001b[0;36manswer_2\u001b[0;34m()\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRidge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malpha_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_prime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_prime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m             \u001b[0mval_predictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_val_prime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m             \u001b[0minner_fold_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr2_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_val_prime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_predictions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mr2_scores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_regression.py\u001b[0m in \u001b[0;36mr2_score\u001b[0;34m(y_true, y_pred, sample_weight, multioutput)\u001b[0m\n\u001b[1;32m    787\u001b[0m     \u001b[0;34m-\u001b[0m\u001b[0;36m3.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    788\u001b[0m     \"\"\"\n\u001b[0;32m--> 789\u001b[0;31m     y_type, y_true, y_pred, multioutput = _check_reg_targets(\n\u001b[0m\u001b[1;32m    790\u001b[0m         \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmultioutput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    791\u001b[0m     )\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_regression.py\u001b[0m in \u001b[0;36m_check_reg_targets\u001b[0;34m(y_true, y_pred, multioutput, dtype)\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m    106\u001b[0m             \"y_true and y_pred have different number of output ({0}!={1})\".format(\n\u001b[1;32m    107\u001b[0m                 \u001b[0my_true\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: y_true and y_pred have different number of output (10!=1)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outer fold0, inner fold 0 r2: -0.35360035602081563\n",
+      "outer fold0, inner fold 1 r2: 0.5044150305230897\n",
+      "outer fold0, inner fold 2 r2: 0.09785257437108386\n",
+      "outer fold1, inner fold 0 r2: -0.25775784497939536\n",
+      "outer fold1, inner fold 1 r2: 0.4377445628758271\n",
+      "outer fold1, inner fold 2 r2: -0.01594861703467987\n",
+      "outer fold2, inner fold 0 r2: 0.14474365667249944\n",
+      "outer fold2, inner fold 1 r2: 0.2941302086568356\n",
+      "outer fold2, inner fold 2 r2: 0.15056215942319306\n",
+      "outer fold3, inner fold 0 r2: 0.03234868158305426\n",
+      "outer fold3, inner fold 1 r2: 0.10528764858690465\n",
+      "outer fold3, inner fold 2 r2: 0.062496952244168846\n",
+      "outer fold4, inner fold 0 r2: 0.004284919219619043\n",
+      "outer fold4, inner fold 1 r2: 0.0026518145852603148\n",
+      "outer fold4, inner fold 2 r2: -0.007882995956810745\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.1462291874364087"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -429,21 +446,8 @@
     "    alpha_list = [0.001,0.01,0.1,1,10]\n",
     "\n",
     "    # Your code here\n",
-    "    \n",
-    "    #X_train, X_test, y_train, y_test = train_testt_split(X, y, random_state = 42)\n",
-    "    \n",
     "    kf = KFold(n_splits = 5)\n",
     "    test_set_scores = []\n",
-    "    \n",
-    "#     for alpha in alpha_list:\n",
-    "#         inner_cv = KFold(n_splits = 3)\n",
-    "#         outer_cv = KFold(n_splits = 5)\n",
-    "        \n",
-    "#         ridge = Ridge(alpha)\n",
-    "#         cross_val_scores = cross_val_score(ridge, X, y, cv = 3)\n",
-    "        \n",
-    "        # train and evaluatet ridge regression \n",
-    "    \n",
     "    for i, (train_idx, test_idx) in enumerate(kf.split(X)):\n",
     "        kf_prime = KFold(n_splits = 3)\n",
     "        \n",
@@ -458,11 +462,14 @@
     "            X_train_prime = X_train[train_prime_idx]\n",
     "            y_train_prime = y_train[train_prime_idx]\n",
     "            X_val_prime = X_train[val_prime_idx]\n",
-    "            y_val_prime = X_train[val_prime_idx]\n",
+    "            y_val_prime = y_train[val_prime_idx]\n",
     "            \n",
     "            model = Ridge(alpha_list[i]).fit(X_train_prime, y_train_prime) \n",
     "            val_predictions = model.predict(X_val_prime)\n",
-    "            inner_fold_score = r2_score(y_val_prime, val_predictions)\n",
+    "            r2 = r2_score(y_val_prime, val_predictions)\n",
+    "            print(f\"outer fold {i}, inner fold {j}\")\n",
+    "             r2: {r2}\")\n",
+    "            models.append(model)\n",
     "        \n",
     "        r2_scores = []\n",
     "        for model in models:\n",
@@ -471,7 +478,7 @@
     "            \n",
     "        best_alpha = alpha_list[np.argmax(r2_scores)]\n",
     "        final_model = Ridge(best_alpha).fit(X_train, y_train)\n",
-    "        r2_test = model.score(X_test_scaled, y_test)\n",
+    "        r2_test = model.score(X_test, y_test)\n",
     "        \n",
     "        test_set_scores.append(r2_test)\n",
     "        \n",
